--- a/src/css/dish.css
+++ b/src/css/dish.css
@@ -29,13 +29,13 @@
     /* Aspect Ratio Number */
         #Dish div:after {
             color: #aaa;
-            font-size: 13px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15px;
+            font-family: "iransans" !important;
             position: absolute;
             bottom: 20px;
             right: 23px;
-            font-weight: 100;
-            content: "4:3";
+            font-weight: 200;
+            content: attr(data-content);
             display: block;
         }
     /* Gray Diagonal */
