--- a/src/css/app.css
+++ b/src/css/app.css
@@ -25,7 +25,12 @@
 }
 
 .form-label {
-  font-size: 0.8rem;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
+.form-check-label{
+  font-size: 0.75rem;
 }
 
 .h4,
@@ -129,5 +134,46 @@ h4 {
 }
 .ql-video {
   width: 100%;
-  height: 320px;
+  height: 400px;
+}
+
+#editor-two .ql-editor .ql-video{
+  width: 100%;
+  height: 670px;
+}
+
+.role-select {
+  width: auto;
+  padding: 0px;
+  border: white;
+  background-image: none;
+  font-size: .65rem;
+  font-weight: 600;
+  color: #858c94;
+}
+
+
+
+.avatar-mini {
+  --tblr-avatar-size: 2.2rem;
+}
+
+.m-10p {
+  margin: 2px;
+}
+
+.hide-element {
+  display: none;
+}
+
+.show-element {
+  display: 'block';
+}
+
+.text-dark input[type=text] { 
+  color: #232e3c;
+}
+
+.ql-container { 
+  min-height: 350px;
 }
