--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,14 +1,3 @@
-@font-face {
-  font-family: "iransans";
-  src: url(../fonts/IRANSansWeb.eot);
-  src: url(../fonts/IRANSansWeb.eot) format("embedded-opentype"),
-    url(../fonts/IRANSansWeb.woff) format("woff"),
-    url(../fonts/IRANSansWeb.ttf) format("truetype");
-}
-
-* {
-  font-family: "iransans" !important;
-}
 
 .card-title {
   font-size: 0.85rem;
@@ -59,6 +48,14 @@ h4 {
   border: 1px solid #dadcde;
   border-radius: 3px;
   transition: border-color .3s, background .3s, color .3s;
+}
+
+.react-datepicker-popper {
+  width: max-content;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
 }
 
 .maxh-250 {
@@ -176,4 +173,63 @@ h4 {
 
 .ql-container { 
   min-height: 350px;
+}
+
+.col-lg-12 {
+  flex-grow: 1;
+  transition: all 300ms ease;
+}
+
+.col-lg-6 {
+  flex-shrink: 1;
+  transition: all 300ms ease;
+}
+
+.theme-dark .form-fieldset, .theme-dark .list-group-item {
+  border-color: #dadcde;
+  background-color: #484b5f;
+  color: #fff;
+}
+.theme-dark .form-hint {
+  color: #fff;
+}
+
+.avatar-ctl {
+  background-color: #d7d8da;
+}
+
+.card-sucess:before {
+  border: 1px solid #299b62;
+}
+
+.card-danger:before {
+  border: 1px solid #d63939;
+}
+
+.timer-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.timer {
+  font-family: "Montserrat";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.text {
+  color: #aaa;
+}
+
+.value {
+  font-size: 40px;
+}
+
+.info {
+  max-width: 360px;
+  margin: 40px auto 0;
+  text-align: center;
+  font-size: 16px;
 }
